--- a/BulkyWeb/Areas/Admin/Views/Company/Index.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Company/Index.cshtml
@@ -7,7 +7,7 @@
     <div class="card-header bg-secondary bg-gradient m-lg-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
-                <h2 class="text-white py-2">Book List</h2>
+                <h2 class="text-white py-2">Company List</h2>
             </div>
         </div>
     </div>
@@ -17,7 +17,7 @@
                 <div class=" text-end">
                     <a asp-controller="Company" asp-action="Upsert" class="btn btn-primary">
                         <i class="bi bi-plus-circle"></i>
-                        Add Your Company Empoplyee to Database
+                        Add Company Employee
                     </a>
                 </div>
             </div>
