--- a/BulkyWeb/Areas/Admin/Views/Company/Index.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Company/Index.cshtml
@@ -17,7 +17,7 @@
                 <div class=" text-end">
                     <a asp-controller="Company" asp-action="Upsert" class="btn btn-primary">
                         <i class="bi bi-plus-circle"></i>
-                        Add Company Employee
+                       Create new Company 
                     </a>
                 </div>
             </div>
@@ -25,7 +25,7 @@
                 <thead>
                     <tr>
                         <th>Name</th>
-                        <th>Street Address</th>
+                        <th>Address</th>
                         <th>City</th>
                         <th>State</th>
                         <th>PostalCode</th>
