--- a/BulkyWeb/Areas/Admin/Views/Company/Upsert.cshtml
+++ b/BulkyWeb/Areas/Admin/Views/Company/Upsert.cshtml
@@ -1,58 +1,58 @@
 ﻿@using Bulky;
 @using Bulky.Models;
-@model CompanyVM 
+@model Company
 
 
 <div class="card shadow border-0 mt-4">
     <div class="card-header bg-secondary bg-gradient m-lg-0 py-3">
         <div class="row">
             <div class="col-12 text-center">
-                <h2 class="text-white py-2"> @(Model.Company.Id != 0 ? "Update" : "Create")  Company</h2>
+                <h2 class="text-white py-2"> @(Model.Id != 0 ? "Update" : "Create")  Company</h2>
             </div>
         </div>
     </div>
     <div class="card-body p-4">
 
         <form method="post" enctype="multipart/form-data">
-            <input asp-for="Company.Id" hidden />
+            <input asp-for="@Model.Id" hidden />
 
             <div class="row">
-                <div class="col-10">
-                    <div class="border p-3 mt-4">
+                <div class="col-12">
+                    <div class="border p-3">
                         <div asp-validation-summary="All"></div>
                         <div class="form-floating py-2 col-12">
-                            <input asp-for="Company.Name" type="text" class="form-control border-0 shadow" />
-                            <label asp-for="Company.Name" class="ms-2"></label>
-                            <span asp-validation-for="Company.Name" class="text-danger"></span>
+                            <input asp-for="Name" type="text" class="form-control border-0 shadow" />
+                            <label asp-for="Name" class="ms-2"></label>
+                            <span asp-validation-for="Name" class="text-danger"></span>
                         </div>
                         <div class="form-floating py-2 col-12">
-                            <textarea asp-for="Company.StreetAddress" type="text" class="form-control border-0 shadow"> </textarea>
-                            <label asp-for="Company.StreetAddress" class="ms-2"></label>
+                            <textarea asp-for="StreetAddress" type="text" class="form-control border-0 shadow"> </textarea>
+                            <label asp-for="StreetAddress" class="ms-2"></label>
                         </div>
                         <div class="form-floating py-2 col-12">
-                            <input asp-for="Company.City" type="text" class="form-control border-0 shadow" />
-                            <label asp-for="Company.City" class="ms-2"></label>
-                            <span asp-validation-for="Company.City" class="text-danger"></span>
+                            <input asp-for="City" type="text" class="form-control border-0 shadow" />
+                            <label asp-for="City" class="ms-2"></label>
+                            <span asp-validation-for="City" class="text-danger"></span>
                         </div>
                         <div class="form-floating py-2 col-12">
-                            <input asp-for="Company.State" type="text" class="form-control border-0 shadow" />
-                            <label asp-for="Company.State" class="ms-2"></label>
-                            <span asp-validation-for="Company.State" class="text-danger"></span>
+                            <input asp-for="State" type="text" class="form-control border-0 shadow" />
+                            <label asp-for="State" class="ms-2"></label>
+                            <span asp-validation-for="State" class="text-danger"></span>
                         </div>
                         <div class="form-floating py-2 col-12">
-                            <input asp-for="Company.PostalCode" type="text" class="form-control border-0 shadow" />
-                            <label asp-for="Company.PostalCode" class="ms-2"></label>
-                            <span asp-validation-for="Company.PostalCode" class="text-danger"></span>
+                            <input asp-for="PostalCode" type="text" class="form-control border-0 shadow" />
+                            <label asp-for="PostalCode" class="ms-2"></label>
+                            <span asp-validation-for="PostalCode" class="text-danger"></span>
                         </div>
                         <div class="form-floating py-2 col-12">
-                            <input asp-for="Company.PhoneNumber" type="text" class="form-control border-0 shadow" />
-                            <label asp-for="Company.PhoneNumber" class="ms-2"></label>
-                            <span asp-validation-for="Company.PhoneNumber" class="text-danger"></span>
+                            <input asp-for="PhoneNumber" type="text" class="form-control border-0 shadow" />
+                            <label asp-for="PhoneNumber" class="ms-2"></label>
+                            <span asp-validation-for="PhoneNumber" class="text-danger"></span>
                         </div>
 
                         <div class="row mt-3">
                             <div class="col-6 col-md-3">
-                                <button type="submit" class="btn btn-primary form-control">@(Model.Company.Id != 0 ? "Update" : "Create") Company</button>
+                                <button type="submit" class="btn btn-primary form-control">@(Model.Id != 0 ? "Update" : "Create") Company</button>
                             </div>
                             <div class="col-6 col-md-3">
                                 <a asp-controller="Company" asp-action="Index" class="btn btn-secondary border form-control  ">
